fixed menu bar disappearing behind containers

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ div.header-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 50px;
 }
 
 .title-name {
@@ -466,6 +467,7 @@ a.anchor{display: block; position: relative; top: -4rem; visibility: hidden;}
   top: 0; /* Stay on top */
   width: 100%; /* Full width */
   transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  z-index:999;
 }
 
 .topnav.responsive{
